[ TEST ]: Initialize a GitHub Actions framework for CI tests

--- a/.github/workflows/deprecated/smoke_test_cross_device_mnn_server_linux.yml
+++ b/.github/workflows/deprecated/smoke_test_cross_device_mnn_server_linux.yml
@@ -52,13 +52,16 @@ jobs:
           echo ${{ steps.extract_branch.outputs.branch }}
           if [[ ${{ steps.extract_branch.outputs.branch }} == "master" ]]; then
             echo "running on master"
-            path=/home/actions-runner/fedml-master
+            path=/home/fedml/FedML
             cd $path
+            git pull
             echo "dir=$path" >> $GITHUB_OUTPUT
           else
             echo "running on dev"
-            path=/home/actions-runner/fedml-dev
+            path=/home/fedml/FedML
             cd $path
+            git pull
+            git checkout ${{ steps.extract_branch.outputs.branch }}
             echo "dir=$path" >> $GITHUB_OUTPUT
           fi
       - name: sync git repo to local pip
@@ -67,7 +70,9 @@ jobs:
           homepath=${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}
           echo $Homepath
           cd $homepath
-          bash ./devops/scripts/sync-fedml-pip.sh
+          cd python
+          pip install -e ./
+          # bash ./devops/scripts/sync-fedml-pip.sh
 
       - name: Install MNN
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
@@ -79,6 +84,6 @@ jobs:
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd python
-          cd quick_start/beehive
+          cd examples/federate/quick_start/beehive
           timeout 60 bash run_server.sh || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
           
