--- a/.github/workflows/deprecated/smoke_test_cross_silo_fedavg_attack_linux.yml
+++ b/.github/workflows/deprecated/smoke_test_cross_silo_fedavg_attack_linux.yml
@@ -29,8 +29,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest]
-        arch: [X64]
+        os: [ ubuntu-latest ]
+        arch: [ X64 ]
         python-version: ['3.8']
         client-index: ['0', '1', '2', '3', '4']
 #        exclude:
@@ -38,7 +38,7 @@ jobs:
 #            python-version: '3.8'
 #          - os: windows-latest
 #            python-version: '3.6'
-    runs-on: [ self-hosted, Linux ]
+    runs-on: [ self-hosted ]
     timeout-minutes: 15
     steps:
       - name: Extract branch name
@@ -53,13 +53,16 @@ jobs:
           echo ${{ steps.extract_branch.outputs.branch }}
           if [[ ${{ steps.extract_branch.outputs.branch }} == "master" ]]; then
             echo "running on master"
-            path=/home/actions-runner/fedml-master
+            path=/home/fedml/FedML
             cd $path
+            git pull
             echo "dir=$path" >> $GITHUB_OUTPUT
           else
             echo "running on dev"
-            path=/home/actions-runner/fedml-dev
+            path=/home/fedml/FedML
             cd $path
+            git pull
+            git checkout ${{ steps.extract_branch.outputs.branch }}
             echo "dir=$path" >> $GITHUB_OUTPUT
           fi
       - name: sync git repo to local pip
@@ -68,13 +71,16 @@ jobs:
           homepath=${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}
           echo $Homepath
           cd $homepath
-          bash ./devops/scripts/sync-fedml-pip.sh
+          cd python
+          pip install -e ./
+          # bash ./devops/srcipts/install-fedml.sh
+          # bash ./devops/scripts/sync-fedml-pip.sh
 
       - name: server - cross-silo - attack
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd python
-          cd examples/security/mqtt_s3_fedavg_attack_mnist_lr_example
+          cd examples/federate/security/mqtt_s3_fedavg_attack_mnist_lr_example
           run_id=cross-silo-attack-${{ format('{0}{1}{2}{3}', github.run_id, matrix.os, matrix.arch, matrix.python-version) }}
           echo ${run_id}
           bash run_server.sh $run_id
@@ -84,7 +90,7 @@ jobs:
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd python
-          cd examples/security/mqtt_s3_fedavg_attack_mnist_lr_example
+          cd examples/federate/security/mqtt_s3_fedavg_attack_mnist_lr_example
           run_id=cross-silo-attack-${{ format('{0}{1}{2}{3}', github.run_id, matrix.os, matrix.arch, matrix.python-version) }}
           echo ${run_id}
           bash run_client.sh 1 $run_id
@@ -94,7 +100,7 @@ jobs:
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd python
-          cd examples/security/mqtt_s3_fedavg_attack_mnist_lr_example
+          cd examples/federate/security/mqtt_s3_fedavg_attack_mnist_lr_example
           run_id=cross-silo-attack-${{ format('{0}{1}{2}{3}', github.run_id, matrix.os, matrix.arch, matrix.python-version) }}
           echo ${run_id}
           bash run_client.sh 2 $run_id
@@ -104,7 +110,7 @@ jobs:
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd python
-          cd examples/security/mqtt_s3_fedavg_attack_mnist_lr_example
+          cd examples/federate/security/mqtt_s3_fedavg_attack_mnist_lr_example
           run_id=cross-silo-attack-${{ format('{0}{1}{2}{3}', github.run_id, matrix.os, matrix.arch, matrix.python-version) }}
           echo ${run_id}
           bash run_client.sh 3 $run_id
@@ -114,7 +120,7 @@ jobs:
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd python
-          cd examples/security/mqtt_s3_fedavg_attack_mnist_lr_example
+          cd examples/federate/security/mqtt_s3_fedavg_attack_mnist_lr_example
           run_id=cross-silo-attack-${{ format('{0}{1}{2}{3}', github.run_id, matrix.os, matrix.arch, matrix.python-version) }}
           echo ${run_id}
           bash run_client.sh 4 $run_id
