--- a/.github/workflows/deprecated/smoke_test_cross_silo_ho_win.yml
+++ b/.github/workflows/deprecated/smoke_test_cross_silo_ho_win.yml
@@ -52,13 +52,16 @@ jobs:
           echo ${{ steps.extract_branch.outputs.branch }}
           if [[ ${{ steps.extract_branch.outputs.branch }} == "master" ]]; then
             echo "running on master"
-            path=/home/actions-runner/fedml-master
+            path=/home/fedml/FedML
             cd $path
+            git pull
             echo "dir=$path" >> $GITHUB_OUTPUT
           else
             echo "running on dev"
-            path=/home/actions-runner/fedml-dev
+            path=/home/fedml/FedML
             cd $path
+            git pull
+            git checkout ${{ steps.extract_branch.outputs.branch }}
             echo "dir=$path" >> $GITHUB_OUTPUT
           fi
       - name: sync git repo to local pip
@@ -67,25 +70,25 @@ jobs:
           homepath=${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}
           echo $Homepath
           cd $homepath
-          bash ./devops/scripts/sync-fedml-pip.sh
+          # bash ./devops/scripts/sync-fedml-pip.sh
 
       - name: server - cross-silo - ho
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
-          cd quick_start/octopus
+          cd examples/federate/quick_start/octopus
           .\run_server.bat ${{ format('{0}{1}{2}{3}', github.run_id, matrix.os, matrix.arch, matrix.python-version) }}
         if:   ${{ matrix.client-index == '0' }}
 
       - name: client 1 - cross-silo - ho
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
-          cd quick_start/octopus
+          cd examples/federate/quick_start/octopus
           .\run_client.bat 1 ${{ format('{0}{1}{2}{3}', github.run_id, matrix.os, matrix.arch, matrix.python-version) }}
         if:   ${{ matrix.client-index == '1' }}
 
       - name: client 2 - cross-silo - ho
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
-          cd quick_start/octopus
+          cd examples/federate/quick_start/octopus
           .\run_client.bat 2 ${{ format('{0}{1}{2}{3}', github.run_id, matrix.os, matrix.arch, matrix.python-version) }}
         if: ${{ matrix.client-index == '2' }}
