--- a/.github/workflows/deprecated/smoke_test_pip_cli_sp_linux.yml
+++ b/.github/workflows/deprecated/smoke_test_pip_cli_sp_linux.yml
@@ -54,13 +54,16 @@ jobs:
           echo ${{ steps.extract_branch.outputs.branch }}
           if [[ ${{ steps.extract_branch.outputs.branch }} == "master" ]]; then
             echo "running on master"
-            path=/home/actions-runner/fedml-master
+            path=/home/fedml/FedML
             cd $path
+            git pull
             echo "dir=$path" >> $GITHUB_OUTPUT
           else
             echo "running on dev"
-            path=/home/actions-runner/fedml-dev
+            path=/home/fedml/FedML
             cd $path
+            git pull
+            git checkout ${{ steps.extract_branch.outputs.branch }}
             echo "dir=$path" >> $GITHUB_OUTPUT
           fi
       - name: sync git repo to local pip
@@ -69,20 +72,20 @@ jobs:
           homepath=${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}
           echo $Homepath
           cd $homepath
-          bash ./devops/scripts/sync-fedml-pip.sh
+          # bash ./devops/scripts/sync-fedml-pip.sh
 
-      - name: test "fedml login" and "fedml build"
-        working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
-        run: |
-          cd ${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}/python
-          cd tests/smoke_test/cli
-          bash login.sh
-          bash build.sh
+      # - name: test "fedml login" and "fedml build"
+      #   working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
+      #   run: |
+      #     cd ${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}/python
+      #     cd tests/smoke_test/cli
+      #     bash login.sh
+      #     bash build.sh
       - name: test simulation-sp
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd ${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}/python
-          cd quick_start/parrot
+          cd examples/federate/quick_start/parrot
           python torch_fedavg_mnist_lr_one_line_example.py --cf fedml_config.yaml
           python torch_fedavg_mnist_lr_custum_data_and_model_example.py --cf fedml_config.yaml
 
@@ -90,40 +93,40 @@ jobs:
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd ${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}/python
-          cd examples/simulation/sp_decentralized_mnist_lr_example
+          cd examples/federate/simulation/sp_decentralized_mnist_lr_example
           python torch_fedavg_mnist_lr_step_by_step_example.py --cf fedml_config.yaml
 
       - name: test sp - sp_fednova_mnist_lr_example
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd ${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}/python
-          cd examples/simulation/sp_fednova_mnist_lr_example
+          cd examples/federate/simulation/sp_fednova_mnist_lr_example
           python torch_fednova_mnist_lr_step_by_step_example.py --cf fedml_config.yaml
           
       - name: test sp - sp_fedopt_mnist_lr_example
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd ${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}/python
-          cd examples/simulation/sp_fedopt_mnist_lr_example
+          cd examples/federate/simulation/sp_fedopt_mnist_lr_example
           python torch_fedopt_mnist_lr_step_by_step_example.py --cf fedml_config.yaml
 
       - name: test sp - sp_hierarchicalfl_mnist_lr_example
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd ${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}/python
-          cd examples/simulation/sp_hierarchicalfl_mnist_lr_example
+          cd examples/federate/simulation/sp_hierarchicalfl_mnist_lr_example
           python torch_hierarchicalfl_mnist_lr_step_by_step_example.py --cf fedml_config.yaml
 
       - name: test sp - sp_turboaggregate_mnist_lr_example
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd ${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}/python
-          cd examples/simulation/sp_turboaggregate_mnist_lr_example
+          cd examples/federate/simulation/sp_turboaggregate_mnist_lr_example
           python torch_turboaggregate_mnist_lr_step_by_step_example.py --cf fedml_config.yaml 
 
       - name: test sp - sp_vertical_mnist_lr_example
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd ${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}/python
-          cd examples/simulation/sp_vertical_mnist_lr_example
+          cd examples/federate/simulation/sp_vertical_mnist_lr_example
           python torch_vertical_mnist_lr_step_by_step_example.py --cf fedml_config.yaml 
