--- a/.github/workflows/deprecated/smoke_test_simulation_mpi_linux.yml
+++ b/.github/workflows/deprecated/smoke_test_simulation_mpi_linux.yml
@@ -40,8 +40,8 @@ jobs:
         - os: ubuntu-latest
           mpi: mpich
           install-mpi: |
-              sudo apt-get update
-              sudo apt install -y mpich libmpich-dev
+              apt-get update
+              apt install -y mpich libmpich-dev
 #        - os: ubuntu-latest
 #          mpi: openmpi
 #          install-mpi: sudo apt install -y openmpi-bin libopenmpi-dev
@@ -50,6 +50,12 @@ jobs:
       shell: bash
       run: echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >>$GITHUB_OUTPUT
       id: extract_branch
+    - name: Install MPI
+      if: matrix.mpi == 'mpich'
+      run: |
+          apt-get update
+          apt-get install -y mpich libmpich-dev
+
     - id: fedml_source_code_home
       name: cd to master or dev branch and git pull
       shell: bash
@@ -57,15 +63,18 @@ jobs:
         ls
         echo ${{ steps.extract_branch.outputs.branch }}
         if [[ ${{ steps.extract_branch.outputs.branch }} == "master" ]]; then
-          echo "running on master"
-          path=/home/actions-runner/fedml-master
-          cd $path
-          echo "dir=$path" >> $GITHUB_OUTPUT
+            echo "running on master"
+            path=/home/fedml/FedML
+            cd $path
+            git pull
+            echo "dir=$path" >> $GITHUB_OUTPUT
         else
-          echo "running on dev"
-          path=/home/actions-runner/fedml-dev
-          cd $path
-          echo "dir=$path" >> $GITHUB_OUTPUT
+            echo "running on dev"
+            path=/home/fedml/FedML
+            cd $path
+            git pull
+            git checkout ${{ steps.extract_branch.outputs.branch }}
+            echo "dir=$path" >> $GITHUB_OUTPUT
         fi
     - name: sync git repo to local pip
       working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
@@ -73,47 +82,47 @@ jobs:
         homepath=${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}
         echo $Homepath
         cd $homepath
-        bash ./devops/scripts/sync-fedml-pip.sh
+        # bash ./devops/scripts/sync-fedml-pip.sh
 
     - name: Test package - FedAvg
       working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
       run: |
         pwd
         cd python
-        cd examples/simulation/mpi_torch_fedavg_mnist_lr_example
+        cd examples/federate/simulation/mpi_torch_fedavg_mnist_lr_example
         sh run_custom_data_and_model_example.sh 4
 
     - name: Test package - Base
       working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
       run: |
         cd python
-        cd examples/simulation/mpi_base_framework_example
+        cd examples/federate/simulation/mpi_base_framework_example
         sh run.sh 4
 
     - name: Test package - Decentralized
       working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
       run: |
         cd python
-        cd examples/simulation/mpi_decentralized_fl_example
+        cd examples/federate/simulation/mpi_decentralized_fl_example
         sh run.sh 4
 
     - name: Test package - FedOPT
       working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
       run: |
         cd python
-        cd examples/simulation/mpi_fedopt_datasets_and_models_example
+        cd examples/federate/simulation/mpi_fedopt_datasets_and_models_example
         sh run_step_by_step_example.sh 4 config/mnist_lr/fedml_config.yaml
 
     - name: Test package - FedProx
       working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
       run: |
         cd python
-        cd examples/simulation/mpi_fedprox_datasets_and_models_example
+        cd examples/federate/simulation/mpi_fedprox_datasets_and_models_example
         sh run_step_by_step_example.sh 4 config/mnist_lr/fedml_config.yaml
 
     - name: Test package - FedGAN
       working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
       run: |
         cd python
-        cd examples/simulation/mpi_torch_fedgan_mnist_gan_example
+        cd examples/federate/simulation/mpi_torch_fedgan_mnist_gan_example
         sh run_step_by_step_example.sh 4
