--- a/python/examples/train/mnist_train/train.yaml
+++ b/python/examples/train/mnist_train/train.yaml
@@ -1,7 +1,7 @@
 # Local directory where your source code resides.
 # It should be the relative path to this job yaml file or the absolute path.
 # If your job doesn't contain any source code, it can be empty.
-workspace: serve_mnist
+workspace: .
 
 # Running entry commands which will be executed as the job entry point.
 # If an error occurs, you should exit with a non-zero code, e.g. exit 1.
@@ -13,7 +13,27 @@ job: |
     echo "Hello, Here is the launch platform."
     echo "Current directory is as follows."
     pwd
-    sleep 40
+    python3 train.py
+    echo "training job finished."
+
+# If you want to use the job created by the MLOps platform,
+# just uncomment the following three, then set job_id and config_id to your desired job id and related config.
+#job_args:
+#  job_id: 2070
+#  config_id: 111
+
+# If you want to create the job with specific name, just uncomment the following line and set job_name to your desired job name
+#job_name: cv_job
+
+job_type: train              # options: train, deploy, federate
+
+# train subtype: general_training, single_machine_training, cluster_distributed_training, cross_cloud_training
+# federate subtype: cross_silo, simulation, web, smart_phone
+# deploy subtype: none
+job_subtype: generate_training
+
+# containerize
+containerize: false
 
 # Bootstrap shell commands which will be executed before running entry commands.
 # Support multiple lines, which can be empty.
@@ -21,18 +41,10 @@ bootstrap: |
   # pip install -r requirements.txt
   echo "Bootstrap finished."
 
-job_type: deploy              # options: train, deploy, federate
-
-# If you want to use the model created by the MLOps platform or create your own model card with a specified name,
-# just uncomment the following four lines, then set model_name to your desired model name or set your desired endpoint name
-#serving_args:
-#  model_name: "fedml-launch-sample-model" # Model card from MLOps platform or create your own model card with a specified name
-#  model_version: "" # Model version from MLOps platform or set as empty string "" which will use the latest version.
-#  endpoint_name: "fedml-launch-endpoint" # Set your end point name which will be deployed, it can be empty string "" which will be auto generated.
-
 computing:
   minimum_num_gpus: 1           # minimum # of GPUs to provision
   maximum_cost_per_hour: $3000   # max cost per hour for your job per gpu card
   #allow_cross_cloud_resources: true # true, false
   #device_type: CPU              # options: GPU, CPU, hybrid
-  resource_type: RTX-4090   # e.g., A100-80G, please check the resource type list by "fedml show-resource-type" or visiting URL: https://open.fedml.ai/accelerator_resource_type
+  resource_type: RTX-4090       # e.g., A100-80G, please check the resource type list by "fedml show-resource-type" or visiting URL: https://open.fedml.ai/accelerator_resource_type
+
