--- a/python/examples/deploy/custom_inference_image/lorax/custom_inference_image.yaml
+++ b/python/examples/deploy/custom_inference_image/lorax/custom_inference_image.yaml
@@ -1,5 +1,6 @@
 workspace: "./"
 
+enable_serverless_container: true
 inference_image_name: "ghcr.io/predibase/lorax:main"
 container_run_command: "--model-id mistralai/Mistral-7B-Instruct-v0.1"
 
@@ -7,8 +8,9 @@ environment_variables:
   HUGGING_FACE_HUB_TOKEN: ""
 
 readiness_probe:
-  path: "health"
+  httpGet:
+    path: "/health"
 
 port: 80
 
-deploy_timeout: 1600
+deploy_timeout_sec: 1600
