--- a/.github/workflows/CI_federate.yml
+++ b/.github/workflows/CI_federate.yml
@@ -20,11 +20,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ Linux ]
+        os: [ Linux, Windows ]
         arch: [X64]
         python-version: ['python3.8', 'python3.9', 'python3.10', 'python3.11']
 
-    runs-on: ${{ matrix.python-version }}
+    runs-on: ["${{ matrix.python-version }}","${{ matrix.os }}"]
     timeout-minutes: 5
     steps:
       - name: Checkout fedml
