--- a/.github/workflows/CI_train.yml
+++ b/.github/workflows/CI_train.yml
@@ -17,14 +17,14 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   train:
-    runs-on: ${{ matrix.python-version }}
+    runs-on: ["${{ matrix.python-version }}","${{ matrix.os }}"]
     strategy:
       fail-fast: false
       matrix:
-        os: [ Linux ]
+        os: [ Linux, Windows ]
         arch: [X64]
         python-version: ['python3.8', 'python3.9', 'python3.10', 'python3.11']
-
+    timeout-minutes: 5
     steps:
       - name: Checkout fedml
         uses: actions/checkout@v3
